--- a/modules/account_payment_sepa_cog/locale/fr_FR.po
+++ b/modules/account_payment_sepa_cog/locale/fr_FR.po
@@ -2,18 +2,22 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:account.payment.group,sepa_msg:"
-msgid ""
-msgstr ""
-
 msgctxt "field:account.payment.journal,sepa_bank_account_number:"
 msgid ""
-msgstr ""
+msgstr " "
+
+msgctxt "field:account.payment.journal,umr_sequence:"
+msgid "Sepa Umr Sequence"
+msgstr "R"
 
 msgctxt "field:account.payment.journal,xml_id:"
 msgid "XML Id"
-msgstr ""
+msgstr "Identifiant XML"
 
-msgctxt "selection:account.payment.journal,process_method:"
-msgid "Sepa"
-msgstr ""
+msgctxt "field:bank.account.number,mandates:"
+msgid "Sepa Mandates"
+msgstr "Mandats SEPA"
+
+msgctxt "model:ir.sequence.type,name:sequence_type_sepa_umr"
+msgid "Sepa Umr"
+msgstr "RUM SEPA"
